# EmbeddedSystemFinalWork

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  main.c  main.uvguix.xuhao  main.uvoptx  main.uvprojx
.claude/skills/run-main/: SKILL.md  driver.ps1
User/: callback.c
User/app/: alarm.c  app.c  app.h  app_state.c  app_state.h  app_types.h  boot_sequence.c  boot_sequence.h  button_logic.c  button_logic.h  command.c  command.h  datetime.c  display.c  display.h  melody.c  melody.h
User/base/: board.c  board.h  board_config.h  delay.c  hibernate_rtc.c  hibernate_rtc.h  i2c_bus.c  pwm_buzzer.c  pwm_buzzer.h  stepper.c  timebase.c  uart_port.c  uart_port.h
docs/: ARCHITECTURE.md  FEATURES.md  README.md  大作业524031910772-许浩然.md
mcu/: ARCHITECTURE.md  main.uvoptx  main.uvprojx
mcu/RTE/_Target_1/: RTE_Components.h
mcu/User/: callback.c  callback.h  main.c
mcu/User/app/: alarm.h  app.c  app_types.h  boot_sequence.c  button_logic.c  command.c  datetime.h  display.c  display.h  melody.c
mcu/User/base/: board.c  delay.c  delay.h  i2c_bus.c  i2c_bus.h  stepper.h  timebase.h
mcu/driverlib/: hibernate.h
pc_host/: README.md  auto_daynight.py  control_panel.py  dashboard.py  log_panel.py  main.py  ntp_helper.py  protocol.py  requirements.txt  serial_worker.py  theme.qss  twin_panel.py  ui_main_window.py  weather_helper.py
pc_host/tests/: test_weather_helper.py
pc_host/ui/: main_window.ui
